; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_dcaenc.c_gammafilter.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_dcaenc.c_gammafilter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@fc = common dso_local global double* null, align 8
@erb = common dso_local global double* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (double (i32, double)* @gammafilter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @gammafilter(i32 %0, double %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca double, align 8
  %5 = alloca double, align 8
  store i32 %0, i32* %3, align 4
  store double %1, double* %4, align 8
  %6 = load double, double* %4, align 8
  %7 = load double*, double** @fc, align 8
  %8 = load i32, i32* %3, align 4
  %9 = sext i32 %8 to i64
  %10 = getelementptr inbounds double, double* %7, i64 %9
  %11 = load double, double* %10, align 8
  %12 = fsub double %6, %11
  %13 = load double*, double** @erb, align 8
  %14 = load i32, i32* %3, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds double, double* %13, i64 %15
  %17 = load double, double* %16, align 8
  %18 = fdiv double %12, %17
  store double %18, double* %5, align 8
  %19 = load double, double* %5, align 8
  %20 = load double, double* %5, align 8
  %21 = fmul double %19, %20
  %22 = fadd double 1.000000e+00, %21
  store double %22, double* %5, align 8
  %23 = load double, double* %5, align 8
  %24 = load double, double* %5, align 8
  %25 = fmul double %23, %24
  %26 = fdiv double 1.000000e+00, %25
  store double %26, double* %5, align 8
  %27 = load double, double* %5, align 8
  %28 = call i32 @log10(double %27)
  %29 = mul nsw i32 20, %28
  %30 = sitofp i32 %29 to double
  ret double %30
}

declare dso_local i32 @log10(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
